# STScI-STIPS

./: .gitignore  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CITATION.cff  Dockerfile  MANIFEST.in  README.md  README.rst  ah_bootstrap.py  environment.yml  environment_dev.yml  setup.cfg  setup.py  tox.ini
.github/: setup_data.yml
.github/workflows/: ci_workflows.yml
.pytest_cache/v/cache/: lastfailed
dev/conda_envs/: environment_v1.0.7.yml  environment_v1.0.8.yml
docs/: Makefile  basic_tutorial.rst  bugs.rst  catalog_formats.rst  conf.py  examples.rst  gaps-in-phoenix-model.rst  help.rst  index.rst  installation.rst  release.rst  requirements.rst  requirements.txt  using_stips.rst
docs/exts/: numfig.py
docs/stips/: index.rst
docs/using_stips/: catalogue_formats.rst  config_file.rst  phoenix_grid.rst  psf_grid.rst
examples/: STIPS_cat.fits  example.py  example_H158.cat  run_stips.py
notebooks/: STIPS Advanced I – Further Observations, Noise and Distortion.ipynb  STIPS Advanced II - PSFs.ipynb  STIPS Advanced Tutorial.ipynb  STIPS Basic Tutorial.ipynb  STIPS Tutorial.ipynb
notebooks/notebooks_data/: psf_WFI_2.0.0_F129_wfi01.fits
ref_data/: retrieve_stips_data.py  retrieve_stips_data.sh
stips/: __init__.py  _astropy_init.py  conftest.py  setup.py
stips/astro_image/: __init__.py  astro_image.py
stips/astro_image/tests/: addWithAlignment_01  addWithAlignment_03  addWithOffset_02  addWithOffset_03  bin_01  bin_02  bin_03  crop_01  crop_02  initFromProfile_01  test_AstroImage.py  test_add_points.py  test_header.py  test_wcs.py  wcs_test.fits  zero_image.fits
stips/data/: CreateIsochroneGrid.py  CreatePhoenixGrid.py  NOTES.TXT  fake_gal1.db  stips_config.yaml
stips/data/grid/: VERSION.txt  input.npy  result_miri_f560w.npy  result_nircamlong_f250m.npy  result_nircamlong_f410m.npy  result_nircamshort_f115w.npy  result_nircamshort_f140m.npy  result_wfc3_f105w.npy  result_wfc3_f126n.npy  result_wfc3_f130n.npy  result_wfc3_f132n.npy  result_wfc3_f160w.npy  result_wfc3_f167n.npy  result_wfc3ir_f110w.npy  result_wfc3ir_f160w.npy  result_wfi_w149.npy
stips/data/psf_data/: PSF_WFC3IR_F110W.fits  index.html
stips/data/residual_files/: err_flat_nircam.fits  err_flat_test.fits  err_rdrk_miri_im.fits  err_rdrk_nircam_long.fits  err_rdrk_nircam_short.fits
stips/errors/: __init__.py  make_cosmic_ray.py
stips/galaxy_module/: __init__.py  sersic.py
stips/instruments/: __init__.py  hst_instrument.py  instrument.py  jwst_instrument.py  miri.py  nircam.py  roman_instrument.py  wfc3ir.py  wfi.py  wfirst_instrument.py
stips/observation_module/: __init__.py  observation_module.py
stips/observation_module/tests/: ObservationModule_prepData_01  test_ObservationModule.py
stips/scene_module/: __init__.py  convert_units.py  scene_module.py
stips/scene_module/tests/: test_SceneModule.py
stips/stellar_module/: __init__.py  star_generator.py
stips/stips/: __init__.py
stips/stips/astro_image/: astro_image.py
stips/stips/errors/: __init__.py  make_cosmic_ray.py
stips/stips/galaxy_module/: sersic.py
stips/stips/instruments/: __init__.py  hst_instrument.py  instrument.py  jwst_instrument.py  miri.py  nircam.py  wfc3ir.py  wfi.py  wfirst_instrument.py
stips/stips/observation_module/: observation_module.py
stips/stips/scene_module/: convert_units.py  scene_module.py
stips/stips/stellar_module/: __init__.py  star_generator.py
stips/stips/utilities/: __init__.py  utilities.py
stips/tests/: test_roman.py  test_wfirst.py
stips/utilities/: DataTable.py  __init__.py  gauss.fits  makePSF.py  test_convolve.py  testing.py  utilities.py  working_psf.fits
stips/utilities/tests/: test_config.py  test_convolve.py  test_makePSF.py
stips/version/: __init__.py
(+19 files in other folders)
