[metadata]
name = stips
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 1.0.8
author = Space Telescope Science Institute
author_email = york@stsci.edu
description = STIPS is the Space Telescope Imaging Product Simulator.
long_description = STIPS is the Space Telescope Imaging Product Simulator. It is designed to create simulations of full-detector post-pipeline astronomical scenes for any telescope.
license = BSD 3-Clause
url = https://github.com/spacetelescope/STScI-STIPS
edit_on_github = False
github_project = https://github.com/spacetelescope/STScI-STIPS
python_requires = ">=3.7"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts =
    
    astropy-package-template-example = packagename.example_mod:main
    

[options.package_data]
* = *.c
stips = data/*
stips.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
markers =
	slow: takes more than 12.5 minutes. Deselect with '-m "not slow"'
	veryslow: takes more than 1 hour. Deselect with '-m "not veryslow"'
	network: requires internet connection. Deselect with '-m "not network"'
  

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
