[metadata]
name = stips
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 2.1.0
author = Space Telescope Science Institute
author_email = york@stsci.edu
description = STIPS is the Space Telescope Imaging Product Simulator.
long_description = STIPS is the Space Telescope Imaging Product Simulator. It is designed to create simulations of full-detector post-pipeline astronomical scenes for the Nancy Grace Roman Space Telescope.
license = BSD 3-Clause
url = https://github.com/spacetelescope/STScI-STIPS
edit_on_github = False
github_project = https://github.com/spacetelescope/STScI-STIPS
python_requires = ">=3.10"

[options]
packages = stips
setup_requires =
    numpy
install_requires =
    astropy
    numpy
    scipy
    photutils
    synphot==1.1.1
    stsynphot==1.1.0
    webbpsf==1.1.1
    pandeia.engine==3.0
    montage-wrapper
    pyyaml
    soc_roman_tools
zip_safe = False
use_2to3 = False
include_package_data = True

[options.package_data]
* = *.c
stips = data/*
stips.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
markers =
	slow: takes more than 12.5 minutes. Deselect with '-m "not slow"'
	veryslow: takes more than 1 hour. Deselect with '-m "not veryslow"'
	network: requires internet connection. Deselect with '-m "not network"'


[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
